--- a/docroot/sites/all/themes/custom/css/custom.css
+++ b/docroot/sites/all/themes/custom/css/custom.css
@@ -713,3 +713,10 @@ h2.title.comment-form {
 .wheel-dot {
 	background: orange;
 }
+
+.directional-arrow {
+	width: 20px;
+	position: absolute;
+	left: 38%;
+	top: 52%;
+}
